Add hover transitions to boxes and buttons.

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -5,7 +5,7 @@
     --text-color: #424874; */
     --background-color: #eae9e4;
     --box-color: #d3e0ce;
-    --accent-color: #e19999;
+    --accent-color: #e7acaa;
     --text-color: #5b6564;
     --shadow-color: #9cb8a0;
 }
@@ -30,10 +30,12 @@
     padding: 3%;
     margin: 1.5% 1.5% 1.5% 3%; /* top, right, bottom, left */
     background-color: var(--box-color);
+    transition: ease transform 0.5s, ease box-shadow 0.5s;
 }
 
 #about-me:hover {
-    box-shadow: 5px 5px var(--shadow-color);
+    box-shadow: 10px 10px var(--shadow-color);
+    transform: translate(-5px, -5px);
 }
 
 #personal-links {
@@ -42,10 +44,12 @@
     margin: 1.5% 3% 1.5% 1.5%; /* top, right, bottom, left */
     background-color: var(--box-color);
     text-align: center;
+    transition: ease transform 0.5s, ease box-shadow 0.5s;
 }
 
 #personal-links:hover {
-    box-shadow: 5px 5px var(--shadow-color);
+    box-shadow: 10px 10px var(--shadow-color);
+    transform: translate(-5px, -5px);
 }
 
 #link-wrapper {
@@ -81,10 +85,12 @@
     margin: 1.5% 1.5% 3% 3%; /* top, right, bottom, left */
     background-color: var(--box-color);
     flex: 1;
+    transition: ease transform 0.5s, ease box-shadow 0.5s;
 }
 
 #my-projects:hover {
-    box-shadow: 5px 5px var(--shadow-color);
+    box-shadow: 10px 10px var(--shadow-color);
+    transform: translate(-5px, -5px);
 }
 
 #riceapps-wrapper {
@@ -100,22 +106,26 @@
     margin: 1.5% 3% 3% 1.5%; /* top, right, bottom, left */
     background-color: var(--box-color);
     flex: 2;
+    transition: ease transform 0.5s, ease box-shadow 0.5s;
 }
 
 #my-experiences:hover {
-    box-shadow: 5px 5px var(--shadow-color);
+    box-shadow: 10px 10px var(--shadow-color);
+    transform: translate(-5px, -5px);
 }
 
 #button {
-    background-color: var(--box-color);
-    color: var(--accent-color);
-    border: 1px solid var(--accent-color);
+    background-color: var(--accent-color);
+    color: var(--box-color);
+    border: 1.5px solid var(--accent-color);
     font-size: 16px;
     padding: 5px 10px;
-    font-weight: 500;
+    font-weight: 550;
+    border-radius: 4px;
+    transition: ease background-color 0.1s, ease color 0.1s;
 }
 
 #button:hover {
-    background-color: var(--accent-color);
-    color: var(--box-color);
+    background-color: var(--box-color);
+    color: var(--accent-color);
 }
