--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -114,17 +114,23 @@
     transform: translate(-5px, -5px);
 }
 
-#experience-wrapper {
-    display: flex;
+.experience {
+    display: none;
+    animation-name: fade;
+    animation-duration: 3s;
     padding: 0px 0px 10px 0px;
 }
 
-#experience-image {
-    flex: 2;
+@keyframes fade {
+    from {opacity: .4}
+    to {opacity: 1}
+}
+
+#img {
+    padding: 0% 1% 0% 0%;
 }
 
 #description {
-    flex: 1;
     padding: 0% 0% 0% 1%;
 }
 
