--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -159,8 +159,8 @@
   margin: 1% 1% 1% 1%; /* top, right, bottom, left */
   padding: 1% 2% 1% 2%;
   display: inline-block;
-  max-width: 50%;
-  max-height: 50%;
+  max-width: 30%;
+  max-height: 30%;
   background-color: var(--background-color);
   transition: ease transform 0.5s, ease box-shadow 0.5s;
 }
@@ -168,4 +168,13 @@
 .comment-box:hover {
   box-shadow: 10px 10px var(--shadow-color);
   transform: translate(-5px, -5px);
+}
+
+#comment-name {
+  margin-bottom: 0;
+}
+
+#comment-date {
+  margin-top: 0;
+  font-size: 12px;
 }
