--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -163,6 +163,7 @@
   max-height: 30%;
   background-color: var(--background-color);
   transition: ease transform 0.5s, ease box-shadow 0.5s;
+  position: relative;
 }
 
 .comment-box:hover {
@@ -180,5 +181,9 @@
 }
 
 #delete-button {
-  font-size: 12px;
+  font-size: 14px;
+  padding: 3px 6px;
+  position: absolute;
+  bottom: 5%;
+  right: 5%;
 }
