--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -180,10 +180,14 @@
   font-size: 12px;
 }
 
-#delete-button {
+#comment-buttons {
+    position: absolute;
+    bottom: 5%;
+    right: 5%;
+    display: flex;
+}
+
+.icon-button {
   font-size: 14px;
   padding: 3px 6px;
-  position: absolute;
-  bottom: 5%;
-  right: 5%;
 }
