--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -4,6 +4,7 @@
   --accent-color: #e7acaa;
   --text-color: #5b6564;
   --shadow-color: #9cb8a0;
+  --light-color: #e3cfcf;
 }
 
 .box {
@@ -144,6 +145,19 @@
   flex: 1;
 }
 
+.input {
+  background-color: var(--background-color);
+  font-family: 'Open Sans', sans-serif;
+  color: var(--text-color);
+  border: 1px solid var(--text-color);
+  font-weight: 450;
+}
+
+#comment-text {
+  width: 200px;
+  height: 100px;
+}
+
 #comment-count {
   font-style: italic;
 }
@@ -162,17 +176,15 @@
   max-width: 30%;
   max-height: 30%;
   background-color: var(--background-color);
-  transition: ease transform 0.5s, ease box-shadow 0.5s;
   position: relative;
   overflow-wrap: break-word;
   word-wrap: break-word;
+  transition: ease transform 0.5s;
 }
 
 .comment-box:hover {
-  box-shadow: 10px 10px var(--shadow-color);
-  transform: translate(-5px, -5px);
+  transform: scale(1.05);
 }
-
 #comment-name {
   margin-bottom: 0;
 }
