Complete simple login/logout feature to post a comment.

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -149,6 +149,10 @@
   display: none;
 }
 
+#login-statement {
+  display: none;
+}
+
 .input {
   background-color: var(--background-color);
   font-family: 'Open Sans', sans-serif;
