--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -153,6 +153,10 @@
   display: none;
 }
 
+#logout-button {
+  margin-left: 5px;
+}
+
 .input {
   background-color: var(--background-color);
   font-family: 'Open Sans', sans-serif;
