--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -106,7 +106,23 @@
   flex: 2;
 }
 
-.experience {
+.img-map-wrapper {
+  display: flex;
+}
+
+#map {
+  width: 504px;
+  height: 378px;
+}
+
+.img-experience {
+  display: none;
+  animation-name: fade;
+  animation-duration: 3s;
+  padding-bottom: 10px;
+}
+
+.descrip-experience {
   display: none;
   animation-name: fade;
   animation-duration: 3s;
@@ -123,7 +139,6 @@
 }
 
 #description {
-  padding-left: 1.5%;
   margin: 0 0 0 0;
 }
 
