--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -149,7 +149,7 @@
   display: flex;
 }
 
-#name-form-container {
+.popup {
   display: none;
   position: fixed;
   z-index: 1;
@@ -162,7 +162,7 @@
   background-color: rgba(0, 0, 0, 0.4);
 }
 
-#name-form {
+.popup-text {
   background-color: var(--box-color);
   margin: auto;
   padding: 20px;
